<?xml version="1.0"?>
<package>
  <name>bebop_joystick</name>
  <version>0.0.1</version>
  <description>The bebop_joystick package for a generic USB joystick</description>

 <maintainer email="andrew.dahdouh@gmail.com">Andrew Dahdouh</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>bebop_msgs</build_depend>
  <run_depend>bebop_driver</run_depend>
  <run_depend>bebop_msgs</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>joy_teleop</run_depend>
  <run_depend>image_view</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>